testing first changes

--- a/_posts/2015-06-18-website.md
+++ b/_posts/2015-06-18-website.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "JordanBarhorst.com"
+title:  "Personal Branding"
 date:   2015-06-18 19:31:01
 published: True
 categories: [website]
