adding case studies and dribbble links

--- a/_posts/2015-06-18-lungs.md
+++ b/_posts/2015-06-18-lungs.md
@@ -7,7 +7,8 @@ categories: [illustration]
 tags: [illustration]
 color: 624c6f
 image-bottom: lungs/bottom/lungs-bottom.jpg
-
+alt-button-text: View on Dribbble
+alt-button-link: https://dribbble.com/shots/1452521-Lungs
 ---
 
 ### Headline
