--- a/_posts/2015-06-18-website.md
+++ b/_posts/2015-06-18-website.md
@@ -7,6 +7,12 @@ categories: [website]
 tags: [website]
 color: d52b28
 image-bottom: website/bottom/website-bottom.jpg
+heroimage: website/featured.jpg
+
+subline: After settling in Cincinnati, it was clear that I would need a new portfolio website to start freelancing in a new city. This is the result of my efforts.
+
+button-text: View the Homepage
+button-link: http://www.jordanbarhorst.com
 
 ---
 
