Adding Harlow Builders Case Study

--- a/_posts/2015-06-18-lungs.md
+++ b/_posts/2015-06-18-lungs.md
@@ -4,7 +4,7 @@ title:  "Lungs"
 date:   2015-06-18 20:31:01
 published: True
 categories: [illustration]
-tags: [illustration]
+tags: [portfolio]
 color: 624c6f
 image-bottom: lungs/bottom/lungs-bottom.jpg
 alt-button-text: View on Dribbble
