--- a/_posts/2015-06-18-website.md
+++ b/_posts/2015-06-18-website.md
@@ -4,15 +4,15 @@ title:  "JordanBarhorst.com"
 date:   2015-06-18 19:31:01
 published: True
 categories: [website]
-tags: [website]
+tags: [portfolio]
 color: d52b28
 image-bottom: website/bottom/website-bottom.jpg
 heroimage: website/featured.jpg
 
 subline: After settling in Cincinnati, it was clear that I would need a new portfolio website to start freelancing in a new city. This is the result of my efforts.
 
-button-text: View the Homepage
-button-link: http://www.jordanbarhorst.com
+button-text: View Additional Work
+button-link: http://www.jordanbarhorst.com/work/
 
 ---
 
