adding portfolio items to work page

--- a/_posts/2015-06-18-lungs.md
+++ b/_posts/2015-06-18-lungs.md
@@ -7,6 +7,7 @@ categories: [illustration]
 tags: [portfolio]
 color: 624c6f
 image-bottom: lungs/bottom/lungs-bottom.jpg
+portfolio-grid-photo: lungs/work/portfolio-item.jpg
 alt-button-text: View on Dribbble
 alt-button-link: https://dribbble.com/shots/1452521-Lungs
 ---
