--- a/_posts/2015-06-18-website.md
+++ b/_posts/2015-06-18-website.md
@@ -8,6 +8,7 @@ tags: [portfolio]
 color: d52b28
 image-bottom: website/bottom/website-bottom.jpg
 heroimage: website/featured.jpg
+portfolio-grid-photo: website/work/portfolio-item.jpg
 
 subline: After settling in Cincinnati, it was clear that I would need a new portfolio website to start freelancing in a new city. This is the result of my efforts.
 
