adding styles for portfolio

--- a/_posts/2015-06-18-website.md
+++ b/_posts/2015-06-18-website.md
@@ -12,8 +12,8 @@ portfolio-grid-photo: website/work/portfolio-item.jpg
 
 subline: After settling in Cincinnati, it was clear that I would need a new portfolio website to start freelancing in a new city. This is the result of my efforts.
 
-button-text: View Additional Work
-button-link: http://www.jordanbarhorst.com/work/
+alt-button-text: View Portfolio
+alt-button-link: http://www.jordanbarhorst.com/work/
 
 ---
 
