Swapping out Lungs for Doublle

--- a/_posts/2015-06-18-doublle.md
+++ b/_posts/2015-06-18-doublle.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title:  "Lungs"
+title:  "Doublle App Logo"
 date:   2015-06-18 20:31:01
 published: True
-categories: [illustration]
+categories: [logo]
 tags: [portfolio]
-color: 624c6f
-image-bottom: lungs/bottom/lungs-bottom.jpg
-portfolio-grid-photo: lungs/work/portfolio-item.jpg
+color: 6D5197
+image-bottom: doublle/bottom/doublle-bottom.jpg
+portfolio-grid-photo: doublle/work/portfolio-item.jpg
 alt-button-text: View on Dribbble
-alt-button-link: https://dribbble.com/shots/1452521-Lungs
+alt-button-link: https://dribbble.com/shots/2390132-Doublle-Logo-Shot
 ---
 
 ### Headline
